# atharavproj

./: .gitignore  API_TESTING_GUIDE.md  CHEAT_SHEET.md  Postman_Collection.json  QUICK_REFERENCE.md  README.md  TESTING_INDEX.md  pyproject.toml  requirements.txt  start_server.bat  start_server.ps1  test_api.py
ai_engine/: fine_tune_grammar.py  main.py  requirements.txt  run_server.py
ai_engine/engines/: correction_engine.py  diff_engine.py  explanation_engine.py  narrative_engine.py  structure_engine.py  tone_engine.py
ai_engine/models/: live_models.py  request_models.py  response_models.py
ai_engine/utils/: text_utils.py
attrarva/: game_data.py  package-lock.json  package.json  requirements.txt
attrarva/app_ui/: package-lock.json  package.json  tailwind.config.ts
attrarva/app_ui/app/: layout.tsx  page.tsx
attrarva/app_ui/components/: Sidebar.tsx
attrarva/app_ui/lib/: api.ts
attrarva/game_backend/: main.py  models.py  requirements.txt  start_game_backend.bat
attrarva/game_backend/services/: ai_engine.py  consistency.py  gamification.py  style.py
attrarva/vite_ui/: index.html  package-lock.json  package.json  start_game_ui.bat  tailwind.config.js
attrarva/vite_ui/src/: App.jsx  index.css
extension/: README.md  background.js  content.css  content.js  manifest.json  popup.html  popup.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/backend/: db.js  package-lock.json  package.json  server.js
frontend/backend/middleware/: auth.js
frontend/src/: App.jsx  index.css
(+48 files in other folders)
