[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "en-core-web-sm",
    "fastapi>=0.111.0",
    "ipykernel>=7.1.0",
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.2",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.7",
    "language-tool-python>=2.7.1",
    "matplotlib>=3.10.8",
    "nltk>=3.9",
    "numpy>=1.26.0,<2",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pydantic>=2.7.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.0.0",
    "spacy>=3.7.0",
    "streamlit>=1.54.0",
    "textstat>=0.7.4",
    "transformers>=5.2.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl" }
